UI updates and fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rent Car</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/Favicon.png" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,118 +14,169 @@
     />
   </head>
   <body>
-    <div class="card text-bg-white">
-      <img src="img/Header.png" class="card-img" alt="Header Background" />
-      <div class="card-img-overlay">
-        <nav class="navbar">
-          <div class="icon">
-            <img src="img/Frame 993.png" alt="" width="100px" />
-          </div>
-          <ul>
-            <li>Become a renter</li>
-            <li>Rental deals</li>
-            <li>How it work</li>
-            <li>Why choose us</li>
-          </ul>
-          <div class="buttons">
-            <button class="signIn">Sign in</button>
-            <button class="signUp">Sign up</button>
-          </div>
-        </nav>
-        <div class="findText">
-          <h1>Find, book and rent a car <span>Easily</span></h1>
-          <p>
-            Get a car wherever and whenever you need it with your IOS and
-            Android device.
-          </p>
-          <div class="linkImgs">
-            <img src="img/image 2.png" alt="playstore" />
-            <img src="img/image 3.png" alt="applestore" />
-          </div>
+    <!-- <img src="img/Hero section bg.png" class="card-img" alt="Header Background" /> -->
+    <section class="heroSection">
+      <nav class="navbar">
+        <div class="icon">
+          <img src="img/Rentcar logo.png" alt="" width="100px" />
         </div>
-
-        <div class="bottomNav">
-          <div class="item">
-            <img src="img/location.png" alt="" />
-            <div class="text">
-              <h6>Location</h6>
-              <span>Search your location</span>
-            </div>
-          </div>
-
-          <div class="divider"></div>
-
-          <div class="item">
-            <img src="img/calendar.png" alt="" />
-            <div class="text">
-              <h6>Pickup date</h6>
-              <span>Tue 15 Feb, 09:00</span>
-            </div>
-          </div>
-
-          <div class="divider"></div>
-
-          <div class="item">
-            <img src="img/calendar.png" alt="" />
-            <div class="text">
-              <h6>Return date</h6>
-              <span>Thu 17 Feb, 11:00</span>
-            </div>
-          </div>
-
-          <button class="search">Search</button>
+        <ul>
+          <li>Become a renter</li>
+          <li>Rental deals</li>
+          <li>How it work</li>
+          <li>Why choose us</li>
+        </ul>
+        <div class="buttons">
+          <button class="signIn">Sign in</button>
+          <button class="signUp">Sign up</button>
+        </div>
+      </nav>
+      <div class="findText">
+        <h1>Find, book and rent a car <span>Easily</span></h1>
+        <p>
+          Get a car wherever and whenever you need it with your IOS and Android
+          device.
+        </p>
+        <div class="linkImgs">
+          <img src="img/Google play.png" alt="playstore" />
+          <img src="img/App store.png" alt="applestore" />
         </div>
       </div>
-    </div>
 
-    <div class="card text-bg-white">
-      <img src="img/How it work.png" class="card-img" alt="How it work Background" />
-      <div class="card-img-overlay howItWork">
-        <div class="how">
-          <span>HOW IT WORK</span>
-        </div>
-
-        <h5 class="card-title">Rent with following 3 working steps</h5>
-
-        <div class="centeropts">
-          <div class="locItem">
-            <img src="img/🦆 icon _car_.png" alt="" />
-            <div class="text">
-              <h6>Choose location</h6>
-              <span>Choose your and find your best car</span>
-            </div>
-          </div>
-          <div class="pickItem">
-            <img src="img/🦆 icon _car_ (1).png" alt="" />
-            <div class="text">
-              <h6>Pick-up date</h6>
-              <span>Select your pick up date and time to book your car</span>
-            </div>
-          </div>
-          <div class="bookItem">
-            <img src="img/🦆 icon _car_ (2).png" alt="" />
-            <div class="text">
-              <h6>Book your car</h6>
-              <span>Book your car and we will deliver it directly to you</span>
-            </div>
+      <div class="bottomNav">
+        <div class="item">
+          <img src="img/Location.png" alt="" />
+          <div class="text">
+            <h6>Location</h6>
+            <span>Search your location</span>
           </div>
         </div>
 
-        <div class="slider">
-          <marquee behavior="" direction="" class="marqueImgs">
-            <img src="img/Frame (1).png" alt="Honda">
-            <img src="img/Frame 24.png" alt="Jaguar">
-            <img src="img/Frame 25.png" alt="Nissan">
-            <img src="img/Frame 26.png" alt="Volvo">
-            <img src="img/Frame 27.png" alt="Audi">
-            <img src="img/Frame 28 (1).png" alt="Acura">
-          </marquee>
+        <div class="divider"></div>
+
+        <div class="item">
+          <img src="img/Calendar.png" alt="" />
+          <div class="text">
+            <h6>Pickup date</h6>
+            <span>Tue 15 Feb, 09:00</span>
+          </div>
         </div>
 
+        <div class="divider"></div>
+
+        <div class="item">
+          <img src="img/Calendar.png" alt="" />
+          <div class="text">
+            <h6>Return date</h6>
+            <span>Thu 17 Feb, 11:00</span>
+          </div>
+        </div>
+
+        <button class="search">Search</button>
+      </div>
+    </section>
+
+    <section class="howItWork">
+      <div class="how">
+        <span>HOW IT WORK</span>
+      </div>
+
+      <h5 class="card-title">Rent with following 3 working steps</h5>
+
+      <div class="centeropts">
+        <div class="locItem">
+          <img src="img/Location icon.png" alt="" />
+          <div class="text">
+            <h6>Choose location</h6>
+            <span>Choose your and find your best car</span>
+          </div>
+        </div>
+        <div class="pickItem">
+          <img src="img/Calendar icon.png" alt="" />
+          <div class="text">
+            <h6>Pick-up date</h6>
+            <span>Select your pick up date and time to book your car</span>
+          </div>
+        </div>
+        <div class="bookItem">
+          <img src="img/Book car icon.png" alt="" />
+          <div class="text">
+            <h6>Book your car</h6>
+            <span>Book your car and we will deliver it directly to you</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="slider">
+        <marquee behavior="" direction="" class="marqueImgs">
+          <img src="img/Honda.png" alt="Honda" />
+          <img src="img/Jaguar.png" alt="Jaguar" />
+          <img src="img/Nissan.png" alt="Nissan" />
+          <img src="img/Volvo.png" alt="Volvo" />
+          <img src="img/Audi.png" alt="Audi" />
+          <img src="img/Acura.png" alt="Acura" />
+        </marquee>
+      </div>
+    </section>
+
+    <section class="whyChooseUs">
+      <div class="rightContent">
+        <div class="why">
+          <span>WHY CHOOSE US</span>
+        </div>
+        <h5 class="card-title">
+          We offer the best experience with our rental deals
+        </h5>
+        <div class="rightopts">
+
+          <div class="item why_items">
+            <img src="img/Best prize.png" alt="" />
+          <div class="text why_text">
+            <h6>Best price guaranteed</h6>
+            <span
+              >Find a lower price? We’ll refund you 100% of the
+              difference.</span
+              >
+          </div>
+        </div>
+
+        <div class="item why_items">
+          <img src="img/Experience.png" alt="" />
+          <div class="text why_text">
+            <h6>Experience driver</h6>
+            <span
+              >Don’t have driver? Don’t worry, we have many experienced driver
+              for you.</span
+              >
+            </div>
+        </div>
+
+        <div class="item why_items">
+          <img src="img/24 Hour car.png" alt="" />
+          <div class="text why_text">
+            <h6>24 hour car delivery</h6>
+            <span
+            >Book your car anytime and we will deliver it directly to
+            you.</span
+            >
+          </div>
+        </div>
+        
+        <div class="item why_items">
+          <img src="img/24 7 Technical.png" alt="" />
+          <div class="text why_text">
+            <h6>24/7 technical support</h6>
+            <span
+            >Have a question? Contact Rentcars support any time when you have
+            problem.</span
+            >
+          </div>
+        </div>
 
       </div>
-      
-    </div>
+
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
