--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rent Car</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="img/Favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,7 +45,7 @@
 
       <div class="bottomNav">
         <div class="item">
-          <img src="img/Location.png" alt="" />
+          <img src="img/location.png" alt="" />
           <div class="text">
             <h6>Location</h6>
             <span>Search your location</span>
@@ -55,7 +55,7 @@
         <div class="divider"></div>
 
         <div class="item">
-          <img src="img/Calendar.png" alt="" />
+          <img src="img/calendar.png" alt="" />
           <div class="text">
             <h6>Pickup date</h6>
             <span>Tue 15 Feb, 09:00</span>
@@ -65,7 +65,7 @@
         <div class="divider"></div>
 
         <div class="item">
-          <img src="img/Calendar.png" alt="" />
+          <img src="img/calendar.png" alt="" />
           <div class="text">
             <h6>Return date</h6>
             <span>Thu 17 Feb, 11:00</span>
