--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
@@ -14,7 +18,6 @@
     />
   </head>
   <body>
-    <!-- <img src="img/Hero section bg.png" class="card-img" alt="Header Background" /> -->
     <section class="heroSection">
       <nav class="navbar">
         <div class="icon">
@@ -128,55 +131,178 @@
           We offer the best experience with our rental deals
         </h5>
         <div class="rightopts">
-
           <div class="item why_items">
             <img src="img/Best prize.png" alt="" />
-          <div class="text why_text">
-            <h6>Best price guaranteed</h6>
-            <span
-              >Find a lower price? We’ll refund you 100% of the
-              difference.</span
-              >
-          </div>
-        </div>
-
-        <div class="item why_items">
-          <img src="img/Experience.png" alt="" />
-          <div class="text why_text">
-            <h6>Experience driver</h6>
-            <span
-              >Don’t have driver? Don’t worry, we have many experienced driver
-              for you.</span
+            <div class="text why_text">
+              <h6>Best price guaranteed</h6>
+              <span
+                >Find a lower price? We’ll refund you 100% of the
+                difference.</span
               >
             </div>
-        </div>
+          </div>
 
-        <div class="item why_items">
-          <img src="img/24 Hour car.png" alt="" />
-          <div class="text why_text">
-            <h6>24 hour car delivery</h6>
-            <span
-            >Book your car anytime and we will deliver it directly to
-            you.</span
-            >
+          <div class="item why_items">
+            <img src="img/Experience.png" alt="" />
+            <div class="text why_text">
+              <h6>Experience driver</h6>
+              <span
+                >Don’t have driver? Don’t worry, we have many experienced driver
+                for you.</span
+              >
+            </div>
+          </div>
+
+          <div class="item why_items">
+            <img src="img/24 Hour car.png" alt="" />
+            <div class="text why_text">
+              <h6>24 hour car delivery</h6>
+              <span
+                >Book your car anytime and we will deliver it directly to
+                you.</span
+              >
+            </div>
+          </div>
+
+          <div class="item why_items">
+            <img src="img/24 7 Technical.png" alt="" />
+            <div class="text why_text">
+              <h6>24/7 technical support</h6>
+              <span
+                >Have a question? Contact Rentcars support any time when you
+                have problem.</span
+              >
+            </div>
           </div>
         </div>
-        
-        <div class="item why_items">
-          <img src="img/24 7 Technical.png" alt="" />
-          <div class="text why_text">
-            <h6>24/7 technical support</h6>
-            <span
-            >Have a question? Contact Rentcars support any time when you have
-            problem.</span
-            >
-          </div>
-        </div>
-
-      </div>
-
       </div>
     </section>
+
+    <section class="popularDeals">
+      <div class="content">
+        <div class="popular">
+          <span>POPULAR RENTAL DEALS</span>
+        </div>
+        <h5>!</h5>
+        <div class="carCards">
+          <div class="carImgs"><img src="img/Jaguar XE.png" alt="" /></div>
+          <div class="carImgs"><img src="img/Audi R8.png" alt="" /></div>
+          <div class="carImgs"><img src="img/BMW M3.png" alt="" /></div>
+          <div class="carImgs">
+            <img src="img/Lamborghini Huracan.png" alt="" />
+          </div>
+        </div>
+
+        <div class="showBtn">
+          <button class="showMore">
+            Show all vehicles <img src="img/arrow-right.png" alt="" />
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="whatPeopleSay">
+      <div class="people">
+        <span>TESTIMONIALS</span>
+      </div>
+      <h5>What peole say about us?</h5>
+      <marquee class="peopleImgs" behavior="" direction="">
+        <img src="img/Jenny.png" alt="" />
+        <img src="img/Charlie.png" alt="" />
+      </marquee>
+    </section>
+
+    <section class="downloadApp">
+      <div class="leftContent">
+        <div class="download">
+          <span>DOWNLOAD</span>
+        </div>
+
+        <div class="downloadText">
+          <h1>Download Rentcars App for <span>FREE</span></h1>
+          <p>For faster, easier booking and exclusive deals.</p>
+
+          <div class="downloadImgs">
+            <img src="img/Google play.png" alt="playstore" />
+            <img src="img/App store.png" alt="applestore" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-col company">
+          <img src="img/Footer logo.png" alt="" class="footer-logo" />
+
+          <div class="footer-info">
+            <div class="item">
+              <img src="img/Footer location.png" alt="" />
+              <p>259566 Hc 1 Glenallen,<br />Alaska, 99588, USA</p>
+            </div>
+
+            <div class="item">
+              <img src="img/call.png" alt="" />
+              <p>+603 4784 273 12</p>
+            </div>
+
+            <div class="item">
+              <img src="img/sms.png" alt="" />
+              <p>rentcars@gmail.com</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer-col">
+          <h3>Our Product</h3>
+          <ul>
+            <li><a href="#">Career</a></li>
+            <li><a href="#">Car</a></li>
+            <li><a href="#">Packages</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Priceline</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-col">
+          <h3>Resources</h3>
+          <ul>
+            <li><a href="#">Download</a></li>
+            <li><a href="#">Help Centre</a></li>
+            <li><a href="#">Guides</a></li>
+            <li><a href="#">Partner Network</a></li>
+            <li><a href="#">Cruises</a></li>
+            <li><a href="#">Developer</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-col">
+          <h3>About Rentcars</h3>
+          <ul>
+            <li><a href="#">Why choose us</a></li>
+            <li><a href="#">Our Story</a></li>
+            <li><a href="#">Investor Relations</a></li>
+            <li><a href="#">Press Center</a></li>
+            <li><a href="#">Advertise</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-col follow">
+          <h3>Follow Us</h3>
+          <div class="icons">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="footer-bottom">
+        Copyright 2023 • Rentcars. All Rights Reserved
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
